--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.2.1",
     "ng2-charts": "^1.5.0",
     "rxjs": "^5.1.0",
+    "utf8": "^2.1.2",
     "web3": "^0.18.4",
     "zone.js": "^0.8.4"
   },
